// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NetworkQualityLevel component should render correctly for level 0 1`] = `
<div>
  <div
    class="NetworkQualityLevel-outerContainer css-121vjg"
  >
    <div
      class="NetworkQualityLevel-innerContainer"
    >
      <div
        style="height: 3px; background: rgba(255, 255, 255, 0.2);"
      />
      <div
        style="height: 6px; background: rgba(255, 255, 255, 0.2);"
      />
      <div
        style="height: 9px; background: rgba(255, 255, 255, 0.2);"
      />
      <div
        style="height: 12px; background: rgba(255, 255, 255, 0.2);"
      />
      <div
        style="height: 15px; background: rgba(255, 255, 255, 0.2);"
      />
    </div>
  </div>
</div>
`;

exports[`the NetworkQualityLevel component should render correctly for level 3 1`] = `
<div>
  <div
    class="NetworkQualityLevel-outerContainer css-121vjg"
  >
    <div
      class="NetworkQualityLevel-innerContainer"
    >
      <div
        style="height: 3px; background: white;"
      />
      <div
        style="height: 6px; background: white;"
      />
      <div
        style="height: 9px; background: white;"
      />
      <div
        style="height: 12px; background: rgba(255, 255, 255, 0.2);"
      />
      <div
        style="height: 15px; background: rgba(255, 255, 255, 0.2);"
      />
    </div>
  </div>
</div>
`;

exports[`the NetworkQualityLevel component should render correctly for level 5 1`] = `
<div>
  <div
    class="NetworkQualityLevel-outerContainer css-121vjg"
  >
    <div
      class="NetworkQualityLevel-innerContainer"
    >
      <div
        style="height: 3px; background: white;"
      />
      <div
        style="height: 6px; background: white;"
      />
      <div
        style="height: 9px; background: white;"
      />
      <div
        style="height: 12px; background: white;"
      />
      <div
        style="height: 15px; background: white;"
      />
    </div>
  </div>
</div>
`;
